...
        android:queryHint="Search for saved collections..."
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvProfileCollectionList"
        android:layout_width="408dp"
        android:layout_height="433dp"
        android:layout_marginBottom="76dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnCreateCollection"
        android:layout_width="178dp"
        android:layout_height="75dp"
        android:layout_marginBottom="1dp"
        android:text="Create Collection"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
...
