<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCollectionTitle">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvRecipesInCollection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvCollectionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="Title"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnDeleteCollectionProfile"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginStart="12dp"
        android:text="Delete"
        app:layout_constraintStart_toEndOf="@+id/btnAddRecipeToCollection"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAddRecipeToCollection"
        android:layout_width="56dp"
        android:layout_height="45dp"
        android:layout_marginStart="12dp"
        android:text="+"
        app:layout_constraintStart_toEndOf="@+id/tvCollectionTitle"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>