<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="39dp"
    tools:layout_editor_absoluteY="37dp">

    <Spinner
        android:id="@+id/spinThemes"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="2dp"
        android:background="@color/material_dynamic_neutral80"
        android:backgroundTint="@color/material_dynamic_neutral90"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDevCurrentThemeTitle" />

    <Button
        android:id="@+id/btnDevCreateTheme"
        android:layout_width="wrap_content"
        android:layout_height="57dp"
        android:layout_marginTop="12dp"
        android:text="Create New Theme"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/themeTextColor" />

    <Button
        android:id="@+id/btnDevChangeTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="4dp"
        android:text="Change"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/spinThemes"
        app:layout_constraintTop_toBottomOf="@+id/svRecipeSearchAdmin" />

    <TextView
        android:id="@+id/tvDevCurrentThemeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:text="Current Theme:"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/svRecipeSearchAdmin" />

    <TextView
        android:id="@+id/tvDevCurrentROTW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="Recipe"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDevROTWTitle" />

    <TextView
        android:id="@+id/tvDevROTWTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Recipe of the Week:"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDevCreateTheme" />

    <Button
        android:id="@+id/btnChangeROTW"
        android:layout_width="115dp"
        android:layout_height="57dp"
        android:layout_marginTop="8dp"
        android:foreground="?attr/selectableItemBackground"
        android:text="Change"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDevCurrentROTW" />

    <Button
        android:id="@+id/btnDevToAdmin"
        android:layout_width="wrap_content"
        android:layout_height="57dp"
        android:layout_marginTop="20dp"
        android:foreground="?attr/selectableItemBackground"
        android:text="Back to Admin"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lvDevRecipeList" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Dev"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/themeBackgroundColor"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="105dp"
        android:background="@color/material_dynamic_neutral_variant80"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinThemes" />

    <TextView
        android:id="@+id/themeTextColor"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="105dp"
        android:background="@color/material_dynamic_neutral_variant80"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/themeBackgroundColor" />

    <TextView
        android:id="@+id/tvTextColorTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="24dp"
        android:text="Text Color:"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/themeTextColor"
        app:layout_constraintTop_toBottomOf="@+id/tvBackgroundColorTitle" />

    <TextView
        android:id="@+id/tvBackgroundColorTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="20dp"
        android:text="Background Color:"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/themeBackgroundColor"
        app:layout_constraintTop_toBottomOf="@+id/spinThemes" />

    <SearchView
        android:id="@+id/svRecipeSearchAdmin"
        android:layout_width="409dp"
        android:layout_height="65dp"
        android:background="#A9FFFFFF"
        android:backgroundTint="#673AB7"
        android:queryHint="Search for recipes..."
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSetROTWTitle" />

    <TextView
        android:id="@+id/tvSetROTWTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginTop="30dp"
        android:text="Set Recipe of the Week"
        android:textAlignment="center"
        android:textSize="30sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/btnCancelAddingROTW"
        android:layout_width="115dp"
        android:layout_height="54dp"
        android:layout_marginStart="148dp"
        android:layout_marginBottom="4dp"
        android:text="Cancel"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ListView
        android:id="@+id/lvDevRecipeList"
        android:layout_width="wrap_content"
        android:layout_height="475dp"
        android:layout_marginStart="1dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/svRecipeSearchAdmin">

    </ListView>

</androidx.constraintlayout.widget.ConstraintLayout>